--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,33 +1,29 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
-	
-<h:head/>	
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<h:body style="width:1024px; margin: auto; background-color: #d4d4d4">
-	<p:panelGrid columns="1">
-		<p:outputLabel value="Hello World!!!!" />
-		<p:outputLabel value="Wildfly, JSF, JPA, CDI e PrimeFaces configurados com sucesso." />
-	</p:panelGrid>
-	
-	<br/>
-	
-	<p:fieldset legend="Testando componentes PrimeFaces">
-		<p:panelGrid columns="2">
-			<p:outputLabel value="Nome:" for="nome"/>
-			<p:inputText placeholder="digite seu primeiro nome" id="nome"/>
-			
-			<p:outputLabel value="Email:" for="email"/>
-			<p:inputText placeholder="seuemail@seudominio.com" id="email"/>
-			
-			<p:commandButton value="OK"/>
-			<p:commandButton value="Cancelar"/>
-		</p:panelGrid>
-	</p:fieldset>
-</h:body>
+<ui:composition template="resources/template/layout.xhtml">
+	<ui:define name="titulo">
+		<label>Dashboard</label>
+	</ui:define>
+
+	<ui:define name="conteudo">
+		<p:panel class="grafico">
+			<h3>GRÁFICO DE PREVISÃO DE PAGAMENTOS</h3>
+		</p:panel>
+		
+		<br/>
+		
+		<p:panel class="grafico">
+			<h3>GRÁFICO DE PAGAMENTOS EFETUADOS</h3>
+		</p:panel>
+	</ui:define>
+
+	<ui:define name="pagina">Dashboard</ui:define>
+</ui:composition>
 
 </html>
