--- a/src/main/webapp/setorcadastro.xhtml
+++ b/src/main/webapp/setorcadastro.xhtml
@@ -12,9 +12,8 @@
 		<p:breadCrumb>
 		    <p:menuitem value="Dashboard" url="/" />
 		    <p:menuitem value="Setores" url="/setor.xhtml" />
-		    <p:menuitem value="Cadastro" url="/setorcadastro.xhtml" />
+		    <p:menuitem value="Cadastro" url="/setorcadastro.xhtml"/>
 		</p:breadCrumb>			
-	
 	</ui:define>
 	
 	<ui:define name="titulo">
@@ -22,6 +21,10 @@
 	</ui:define>
 
 	<ui:define name="conteudo">
+    	
+    	<f:metadata>
+    		<f:viewParam name="setor" value="#{setorCadastroBean.setor}" />
+    	</f:metadata>		
 		
 		<div class="ui-g">	
 			<div class="ui-g-12">
