--- a/src/main/webapp/setorcadastro.xhtml
+++ b/src/main/webapp/setorcadastro.xhtml
@@ -30,7 +30,7 @@
 			<div class="ui-g-12">
 
 				<h:form>
-					<p:messages globalOnly="true" closable="true"/>
+					<p:messages autoUpdate="true" globalOnly="true"/>
 					
 					<p:focus context="@form" />
 
