--- a/src/main/webapp/pagamento.xhtml
+++ b/src/main/webapp/pagamento.xhtml
@@ -13,7 +13,6 @@
 		    <p:menuitem value="Dashboard" url="/" />
 		    <p:menuitem value="Pagamentos" url="/pagamento.xhtml" />
 		</p:breadCrumb>			
-	
 	</ui:define>
 	
 	<ui:define name="titulo">
@@ -67,7 +66,7 @@
 						
 						<p:column width="10%">
 							<f:facet name="header">Operações</f:facet>
-							<p:commandButton title="Alterar" icon="fa fa-pencil" action="#{pagamentoBean.alterar(pagameto)}"/>
+							<p:commandButton title="Alterar" icon="fa fa-pencil" action="#{pagamentoBean.alterar(parcela)}"/>
 							
 							<p:commandButton title="Excluir" icon="fa fa-trash" actionListener="#{pagamentoBean.excluir(pagamento)}" update="@form" process="@this">
 								<p:confirm header="Confirma exclusão" message="Confirma a excusão de '#{pagamento.historico}'" icon="ui-icon-alert" />							
