--- a/src/main/webapp/usuariocadastro.xhtml
+++ b/src/main/webapp/usuariocadastro.xhtml
@@ -38,7 +38,7 @@
 						<f:facet name="left">
 							<p:button value="Voltar" outcome="/usuario.xhtml"/>
 							<p:spacer style="width: 10px;"/>
-					        <p:commandButton value="Salvar" actionListener="#{usuarioCadastroBean.salvar()}" update="@form"/>
+					        <p:commandButton value="Salvar" action="#{usuarioCadastroBean.salvar()}" update="@form"/>
 						</f:facet>
 					</p:toolbar>
 					
