--- a/src/main/webapp/fornecedor.xhtml
+++ b/src/main/webapp/fornecedor.xhtml
@@ -68,7 +68,9 @@
 						
 						<p:column width="15%">
 							<f:facet name="header">Operações</f:facet>
-							<p:commandButton title="Alterar" icon="fa fa-pencil" action="#{fornecedorBean.alterar(fornecedor)}"/>
+							<p:button title="Alterar" icon="fa fa-pencil" outcome="fornecedorcadastro">
+								<f:param name="fornecedor" value="#{fornecedor.idFornecedor}"/>
+							</p:button>
 							
 							<p:commandButton title="Excluir" icon="fa fa-trash" actionListener="#{fornecedorBean.excluir(fornecedor)}" update="@form" process="@this">
 								<p:confirm header="Confirma exclusão" message="Confirma a excusão de '#{fornecedor.razaoSocial}'" icon="ui-icon-alert" />							
