Inicio do lançamento de parcelas do pagamento

--- a/src/main/webapp/contasapagar.xhtml
+++ b/src/main/webapp/contasapagar.xhtml
@@ -87,7 +87,7 @@
 		</div>
 	</ui:define>
 
-	<ui:define name="pagina">Contas</ui:define>
+	<ui:define name="pagina">Contas a Pagar</ui:define>
 </ui:composition>
 
 </html>
