--- a/src/main/webapp/fornecedorcadastro.xhtml
+++ b/src/main/webapp/fornecedorcadastro.xhtml
@@ -147,7 +147,7 @@
 		
 	</ui:define>
 
-	<ui:define name="pagina">Fornecedores</ui:define>
+	<ui:define name="pagina">Cadastro de Fornecedores</ui:define>
 	
 </ui:composition>
 
