--- a/src/main/webapp/setorcadastro.xhtml
+++ b/src/main/webapp/setorcadastro.xhtml
@@ -64,7 +64,7 @@
 		</div>
 	</ui:define>
 
-	<ui:define name="pagina">Setores</ui:define>
+	<ui:define name="pagina">Cadastro de Setores</ui:define>
 </ui:composition>
 
 </html>
