--- a/src/main/webapp/usuariocadastro.xhtml
+++ b/src/main/webapp/usuariocadastro.xhtml
@@ -95,7 +95,7 @@
 		</div>
 	</ui:define>
 
-	<ui:define name="pagina">Usuários</ui:define>
+	<ui:define name="pagina">Cadastro de Usuários</ui:define>
 </ui:composition>
 
 </html>
