--- a/src/main/webapp/contacadastro.xhtml
+++ b/src/main/webapp/contacadastro.xhtml
@@ -64,7 +64,7 @@
 		</div>
 	</ui:define>
 
-	<ui:define name="pagina">Contas</ui:define>
+	<ui:define name="pagina">Cadastro de Contas</ui:define>
 </ui:composition>
 
 </html>
