--- a/src/main/webapp/usuario.xhtml
+++ b/src/main/webapp/usuario.xhtml
@@ -89,7 +89,7 @@
 		</div>
 	</ui:define>
 
-	<ui:define name="pagina">Contas</ui:define>
+	<ui:define name="pagina">Usuários</ui:define>
 </ui:composition>
 
 </html>
