--- a/src/main/webapp/contatocadastro.xhtml
+++ b/src/main/webapp/contatocadastro.xhtml
@@ -4,6 +4,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:o="http://omnifaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="resources/template/layout.xhtml">
@@ -25,8 +26,7 @@
 	<ui:define name="conteudo">
 		
     	<f:metadata>
-    		<f:viewParam name="contato" value="#{contatoCadastroBean.contato}" />
-    		<f:viewParam name="fornecedor" value="#{contatoCadastroBean.fornecedor}" />
+    		<o:viewParam name="contato" value="#{contatoCadastroBean.contato}" />
     	</f:metadata>		
 		
 		<div class="ui-g">	
