--- a/src/main/webapp/fornecedorcadastro.xhtml
+++ b/src/main/webapp/fornecedorcadastro.xhtml
@@ -4,6 +4,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:o="http://omnifaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="resources/template/layout.xhtml">
@@ -80,10 +81,10 @@
 				        
 					</p:panelGrid>
 					
-					<p:panelGrid columns="1">
+					<p:panelGrid columns="1" rendered="#{fornecedorCadastroBean.permiteCadastrarContato}">
 						<p:toolbar>
 							<f:facet name="left">
-								<p:commandButton value="Novo Contato" icon="fa fa-plus" 
+								<p:commandButton value="Novo Contato" icon="fa fa-plus"
 									action="#{fornecedorCadastroBean.novoContato()}"/>
 							</f:facet>
 						</p:toolbar>
