--- a/src/main/webapp/setor.xhtml
+++ b/src/main/webapp/setor.xhtml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
@@ -15,9 +15,13 @@
 		</p:breadCrumb>			
 	</ui:define>
 	
-	<ui:define name="titulo">
-		<label>Cadastro de Setores</label>
+	<ui:define name="titulo">Cadastro de Setores</ui:define>
+	
+	<ui:define name="subtitulo">
+		<i class="ace-icon fa fa-angle-double-right"></i>
+		<span style="padding-left: 0.5em;">relação dos setores a serem gerenciados nas operçãoes financeiras</span> 
 	</ui:define>
+	
 
 	<ui:define name="conteudo">
 		
