Reformatação dos breadcrumbs, títulos e subtítulos para o template AceAdmin

--- a/src/main/webapp/conta.xhtml
+++ b/src/main/webapp/conta.xhtml
@@ -9,15 +9,15 @@
 <ui:composition template="resources/template/aceadmin.xhtml">
 
 	<ui:define name="navegacao">
-		<p:breadCrumb>
-		    <p:menuitem value="Dashboard" url="/" />
-		    <p:menuitem value="Contas" url="/conta.xhtml" />
-		</p:breadCrumb>			
-	
+		<li class="active">Contas</li>
 	</ui:define>
 	
 	<ui:define name="titulo">
-		<label>Cadastro de Contas</label>
+		Cadastro de Contas
+	</ui:define>
+
+	<ui:define name="subtitulo">
+		<label>Classificação das despesas</label>
 	</ui:define>
 
 	<ui:define name="conteudo">
