--- a/src/main/webapp/fornecedor.xhtml
+++ b/src/main/webapp/fornecedor.xhtml
@@ -9,15 +9,15 @@
 <ui:composition template="resources/template/aceadmin.xhtml">
 
 	<ui:define name="navegacao">
-		<p:breadCrumb>
-		    <p:menuitem value="Dashboard" url="/" />
-		    <p:menuitem value="Fornecedores" url="/fornecedor.xhtml" />
-		</p:breadCrumb>			
-	
+		<li class="active">Fornecedores</li>
 	</ui:define>
 	
 	<ui:define name="titulo">
-		<label>Cadastro de Fornecedores</label>
+		Cadastro de Fornecedores
+	</ui:define>
+
+	<ui:define name="subtitulo">
+		Informações referentes aos fornecedores
 	</ui:define>
 
 	<ui:define name="conteudo">
