--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,8 +7,14 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="resources/template/aceadmin.xhtml">
+	<ui:define name="navegacao"></ui:define>
+
 	<ui:define name="titulo">
-		<label>Dashboard</label>
+		Dashboard
+	</ui:define>
+
+	<ui:define name="subtitulo">
+		Resumo da situação financeira
 	</ui:define>
 
 	<ui:define name="conteudo">
