--- a/src/main/webapp/pagamento.xhtml
+++ b/src/main/webapp/pagamento.xhtml
@@ -9,14 +9,15 @@
 <ui:composition template="resources/template/aceadmin.xhtml">
 
 	<ui:define name="navegacao">
-		<p:breadCrumb>
-		    <p:menuitem value="Dashboard" url="/" />
-		    <p:menuitem value="Pagamentos" url="/pagamento.xhtml" />
-		</p:breadCrumb>			
+		<li class="active">Contas a Pagar</li>
 	</ui:define>
 	
 	<ui:define name="titulo">
-		<label>Contas a Pagar</label>
+		Contas a Pagar
+	</ui:define>
+
+	<ui:define name="subtitulo">
+		Lançamento de contas a pagar
 	</ui:define>
 
 	<ui:define name="conteudo">
