--- a/src/main/webapp/setor.xhtml
+++ b/src/main/webapp/setor.xhtml
@@ -9,17 +9,13 @@
 <ui:composition template="resources/template/aceadmin.xhtml">
 
 	<ui:define name="navegacao">
-		<p:breadCrumb>
-		    <p:menuitem value="Dashboard" url="/" />
-		    <p:menuitem value="Setores" url="/setor.xhtml" />
-		</p:breadCrumb>			
+		<li class="active">Setores</li>
 	</ui:define>
 	
 	<ui:define name="titulo">Cadastro de Setores</ui:define>
 	
 	<ui:define name="subtitulo">
-		<i class="ace-icon fa fa-angle-double-right"></i>
-		<span style="padding-left: 0.5em;">relação dos setores a serem gerenciados nas operçãoes financeiras</span> 
+		<span>Relação dos centros de custo a serem gerenciados nas operações financeiras</span> 
 	</ui:define>
 	
 
