--- a/src/main/webapp/usuario.xhtml
+++ b/src/main/webapp/usuario.xhtml
@@ -9,15 +9,15 @@
 <ui:composition template="resources/template/aceadmin.xhtml">
 
 	<ui:define name="navegacao">
-		<p:breadCrumb>
-		    <p:menuitem value="Dashboard" url="/" />
-		    <p:menuitem value="Usuários" url="/usuario.xhtml" />
-		</p:breadCrumb>			
-	
+		<li class="active">Usuários</li>
 	</ui:define>
 	
 	<ui:define name="titulo">
-		<label>Cadastro de Usuários</label>
+		Cadastro de Usuários
+	</ui:define>
+
+	<ui:define name="subtitulo">
+		Relação de usuários do sistema
 	</ui:define>
 
 	<ui:define name="conteudo">
