--- a/src/main/webapp/conta.xhtml
+++ b/src/main/webapp/conta.xhtml
@@ -4,7 +4,11 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:jsf="http://xmlns.jcp.org/jsf"
+	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
+<h:head/>
 
 <ui:composition template="resources/template/aceadmin.xhtml">
 
@@ -13,6 +17,7 @@
 	</ui:define>
 	
 	<ui:define name="titulo">
+		<i class="ace-icon fa fa-list-alt smaller-90"></i>
 		Cadastro de Contas
 	</ui:define>
 
