Prototipagem do cadastro de fornecedores no template AceAdmin

--- a/src/main/webapp/fornecedor.xhtml
+++ b/src/main/webapp/fornecedor.xhtml
@@ -13,6 +13,7 @@
 	</ui:define>
 	
 	<ui:define name="titulo">
+		<i class="ace-icon fa fa-list-alt smaller-90"></i>
 		Cadastro de Fornecedores
 	</ui:define>
 
