--- a/src/main/webapp/pagamentocadastro.xhtml
+++ b/src/main/webapp/pagamentocadastro.xhtml
@@ -4,7 +4,11 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:jsf="http://xmlns.jcp.org/jsf"
+	xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
+<h:head/>
 
 <ui:composition template="resources/template/aceadmin.xhtml">
 
@@ -167,7 +171,7 @@
 							<p:column width="10%">
 								<f:facet name="header">Operações</f:facet>
 								<p:button title="Alterar" icon="fa fa-pencil" outcome="pagamentocadastroparcela">
-									<f:param name="parcela" value="#{parcela.idParcela}"/>
+									<f:param name="parcela" value="#{parcela.idPagamentoParcela}"/>
 								</p:button>
 
 								<p:commandButton title="Excluir" icon="fa fa-trash" 
