Conclusão da baixa de pagamentos e criação das classes services

--- a/src/main/webapp/fornecedor.xhtml
+++ b/src/main/webapp/fornecedor.xhtml
@@ -33,7 +33,7 @@
 						</f:facet>
 						
 						<f:facet name="right">
-							<p:inputText placeholder="Pesquisar por..." size="30" value="#{fornecedorBean.pesquisa}"/>
+							<p:inputText placeholder="Pesquisar por..." size="30" value="#{fornecedorBean.filtro}"/>
 							<p:commandButton value="Pesquisar" icon="fa fa-search" actionListener="#{fornecedorBean.pesquisar()}" update="@form"/>
 						</f:facet>
 					</p:toolbar>
