--- a/src/main/webapp/pagamento.xhtml
+++ b/src/main/webapp/pagamento.xhtml
@@ -36,7 +36,7 @@
 						</f:facet>
 						
 						<f:facet name="right">
-							<p:inputText placeholder="Pesquisar por..." size="30" value="#{pagamentoBean.pesquisa}"/>
+							<p:inputText placeholder="Pesquisar por..." size="30" value="#{pagamentoBean.filtro}"/>
 							<p:commandButton value="Pesquisar" icon="fa fa-search" actionListener="#{pagamentoBean.pesquisar()}" update="@form"/>
 						</f:facet>
 					</p:toolbar>
