--- a/src/main/webapp/usuario.xhtml
+++ b/src/main/webapp/usuario.xhtml
@@ -32,7 +32,7 @@
 						</f:facet>
 						
 						<f:facet name="right">
-							<p:inputText placeholder="Pesquisar por..." size="30" value="#{usuarioBean.pesquisa}"/>
+							<p:inputText placeholder="Pesquisar por..." size="30" value="#{usuarioBean.filtro}"/>
 							<p:commandButton value="Pesquisar" icon="fa fa-search" actionListener="#{usuarioBean.pesquisar()}" update="@form"/>
 						</f:facet>
 					</p:toolbar>
