--- a/src/main/webapp/setor.xhtml
+++ b/src/main/webapp/setor.xhtml
@@ -35,7 +35,7 @@
 
 					<p:toolbar>
 						<f:facet name="left">
-							<p:button value="Novo" icon="fa fa-plus" outcome="/setorcadastro.xhtml"/>
+							<p:button value="Novo" icon="fa fa-plus" outcome="/setorcadastroPF.xhtml"/>
 						</f:facet>
 						
 						<f:facet name="right">
